# meeting-intelligence

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  security.py
app/routers/: __init__.py  auth.py  health.py  meetings.py  search.py  streaming.py
app/services/: __init__.py  auth.py  diarization.py  embeddings.py  streaming.py  summarizer.py  transcription.py
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: Header.tsx
frontend/app/live/: page.tsx
frontend/app/meetings/[id]/: page.tsx
tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_meetings.py  test_search.py  test_services.py
workers/: celery_app.py  tasks.py
